atualizacao de exercicio

--- a/curso em video/ex010links/index.html
+++ b/curso em video/ex010links/index.html
@@ -17,9 +17,16 @@
     <p>voce pode tambem acessar meu <a href="https://www.youtube.com/watch?v=LeOVXQDsAIY" target="_blank" rel="external">canal no yotube</a></p>
     
         <p><mark>para fazer isso se ultiliza a teg &lt;a> mais desse jeito dependendo se for um link que nao seja do seu dominio  ele ira abrir na mesma aba <br>entao para abrir o link em outra aba se ultiliza &lt;a + <q>o link e logo depois do link coloca</q> target="_blank" rel="external"> o external serve para saber que e um link externo</mark></p>
-    <h2>usando links internos</h2>
+    <h1>usando links internos</h1>
     <p>esta e a primeira pagina do site se quiser pode entra na minha <a href="pag02.html" target="_self" rel="next">segunda pagina</a></p>
     <p>voce pode acessar essa <a href="/ex010/noticias/not.html">minha pagina</a></p>
-
+    <h1>links pra download</h1>
+    <ul>
+        <li><a href="/livro/declaracao (1).pdf" download="declaracao.pdf" type="application/pdf">baixar o pdf</a></li>
+        <li><a href="/livro/declaracao (1).rar" download="declaracao.rar" type="application/zip">arquivo compactado</a>
+        </li>
+    </ul>
+    <p> para anexar o link do arqueivo dessa maneira se usa 0 &lt;a> do mesmo jeito que os links externos e depois do local que o arquivo esta <br>coloca download="nome do arquivo" + type="application/formato do arquivo"</p>
+    <p>para saber oque colocar no application existe <a href="https://www.iana.org/assignments/media-types/media-types.xhtml">esse site</a> para saber oque colocar</p>
 </body>
 </html>
