--- a/trabalho_m2/index.html
+++ b/trabalho_m2/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lacos da Alice</title>
     <link rel="shortcut icon" href="/img/gravata-borboleta.png" type="image/x-icon">
-    <link rel="stylesheet" href="/">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,6 +39,7 @@
                         <p class="pri">
                             Estamos de cara nova! Os mesmos laços, a nova página e de cara nova ❤️ o que acharam?
                         </p>
+                    </div>
                         <div class="geral_lda">
                             <div class="car_lda">
                                 <a href="/pages/carrinho.html" class="bnt primary" target="_self"><img src="/img/compras.png" alt="Compras"></a>
@@ -47,13 +48,12 @@
                                 <a href="https://wa.me/5511996813891?text=Oii%2C+vim+pela+sua+pagina+de+la%C3%A7os"  class="bnt secondary" target="_blank"><img src="/img/wats.png" alt="WhatsApp"></a>
                             </div>
                             <div class="insta_lda">
-                                <a href="https://www.instagram.com/lacosdalice/" class="bnt secondary" target="_blank"><img src="/img/insta.png"alt="Instagram"></a>
+                                <a href="https://www.instagram.com/lacosdalice/" class="bnt secondary" target="_blank"><img src="/img/insta.png"aldt="Instagram"></a>
                             </div>
                             <div class="loc_lda">
                                 <a href="https://goo.gl/maps/D3SPEhQvT5iuApug9" class="bnt secondary" target="_blank"><img src="/img/local.png"alt="Instagram"></a>
                             </div>
                         </div>
-                    </div>
                 </div>
             </section>
             <section class="products">
