--- a/trabalho_m2/pages/carrinho.html
+++ b/trabalho_m2/pages/carrinho.html
@@ -6,13 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrinho</title>
     <link rel="stylesheet" href="/css/style.css">
+    <style>
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        #divbusca {
+            margin-left: auto;
+        }
+    </style>
 </head>
 <body>
-    <header><img src="/img//recortada.jpg" alt="">
-    <div id="divbusca">
-        <input type="text" name="txtBusca" id="txtBusca" placeholder="Buscar">
-        <img src="/img/icon_busca.png" id="btnBusca" alt="Buscar"/>
-    </div>
-</header>
+    <header><img src="/img//recortada.jpg" alt="logo lacos da alice">
+        <div id="divbusca">
+            <input type="text" name="txtBusca" id="txtBusca" placeholder="Buscar">
+            <img src="/img/icon_busca.png" id="btnBusca" alt="Buscar"/>
+        </div>
+    </header>
+</body>
+
 </body>
 </html>
