--- a/trabalho_m2/pages/carrinho.html
+++ b/trabalho_m2/pages/carrinho.html
@@ -6,16 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrinho</title>
     <link rel="stylesheet" href="/css/style.css">
-    <style>
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        #divbusca {
-            margin-left: auto;
-        }
-    </style>
 </head>
 <body>
     <header><img src="/img//recortada.jpg" alt="logo lacos da alice">
@@ -24,7 +14,114 @@
             <img src="/img/icon_busca.png" id="btnBusca" alt="Buscar"/>
         </div>
     </header>
-</body>
-
+    <main>
+        <div class="imgVendas">
+            <div class="produto">
+                <img src="/img/elasven1.jpg" alt="">
+                <h3>Tiara</h3>
+                <p>Preço: R$ 19,99</p>
+                <p>Descrição do produto...</p>
+                <a href="#">Ver produto</a>
+            </div>
+            <div class="produto">
+                <img src="/img/elasven2.jpg" alt="">
+                <h3>Tiara</h3>
+                <p>Preço: R$ 15,99</p>
+                <p>Descrição do produto...</p>
+                <a href="#">Ver produto</a>
+            </div>
+            <div class="produto">
+                <img src="/img/elasven3.jpg" alt="">
+                <h3>Tiara</h3>
+                <p>Preço: R$ 9,99</p>
+                <p>Descrição do produto...</p>
+                <a href="#">Ver produto</a>
+            </div>
+            <div class="produto">
+                <img src="/img/elasven4.jpg" alt="">
+                <h3>Tiara</h3>
+                <p>Preço: R$ 14,99</p>
+                <p>Descrição do produto...</p>
+                <a href="#">Ver produto</a>
+            </div>
+            <div class="produto">
+                <img src="/img/elasven5.jpg" alt="">
+                <h3>Tiara</h3>
+                <p>Preço: R$ 12,99</p>
+                <p>Descrição do produto...</p>
+                <a href="#">Ver produto</a>
+            </div>
+            <div class="produto">
+                <img src="/img/lacoven1.jpg" alt="">
+                <h3>Laços</h3>
+                <p>Preço: R$ 17,99</p>
+                <p>Descrição do produto...</p>
+                <a href="#">Ver produto</a>
+            </div>
+            <div class="produto">
+                <img src="/img/lacoven2.jpg" alt="">
+                <h3>Laços</h3>
+                <p>Preço: R$ 11,99</p>
+                <p>Descrição do produto...</p>
+                <a href="#">Ver produto</a>
+            </div>
+            <div class="produto">
+                <img src="/img/lacoven3.jpg" alt="">
+                <h3>Laços</h3>
+                <p>Preço: R$ 8,99</p>
+                <p>Descrição do produto...</p>
+                <a href="#">Ver produto</a>
+            </div>
+            <div class="produto">
+                <img src="/img/lacoven4.jpg" alt="">
+                <h3>Laços</h3>
+                <p>Preço: R$ 13,99</p>
+                <p>Descrição do produto...</p>
+                <a href="#">Ver produto</a>
+            </div>
+            <div class="produto">
+                <img src="/img/lacoven5.jpg" alt="">
+                <h3>Laços</h3>
+                <p>Preço: R$ 10,99</p>
+                <p>Descrição do produto...</p>
+                <a href="#">Ver produto</a>
+            </div>
+            <div class="produto">
+                <img src="/img/tiaraven1.jpg" alt="">
+                <h3>Elásticos</h3>
+                <p>Preço: R$ 6,99</p>
+                <p>Descrição do produto...</p>
+                <a href="#">Ver produto</a>
+            </div>
+            <div class="produto">
+                <img src="/img/tiaraven2.jpg" alt="">
+                <h3>Elásticos</h3>
+                <p>Preço: R$ 5,99</p>
+                <p>Descrição do produto...</p>
+                <a href="#">Ver produto</a>
+            </div>
+            <div class="produto">
+                <img src="/img/tiaraven3.jpg" alt="">
+                <h3>Elásticos</h3>
+                <p>Preço: R$ 7,99</p>
+                <p>Descrição do produto...</p>
+                <a href="#">Ver produto</a>
+            </div>
+            <div class="produto">
+                <img src="/img/tiaraven4.jpg" alt="">
+                <h3>Elásticos</h3>
+                <p>Preço: R$ 4,99</p>
+                <p>Descrição do produto...</p>
+                <a href="#">Ver produto</a>
+            </div>
+            <div class="produto">
+                <img src="/img/tiaraven5.jpg" alt="">
+                <h3>Elásticos</h3>
+                <p>Preço: R$ 3,99</p>
+                <p>Descrição do produto...</p>
+                <a href="#">Ver produto</a>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
