--- a/trabalho_m2/pages/carrinho.html
+++ b/trabalho_m2/pages/carrinho.html
@@ -8,120 +8,122 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <header><img src="/img//recortada.jpg" alt="logo lacos da alice">
+    <header class="header1"><a href="/index.html"><img src="/img//recortada.jpg" alt="logo lacos da alice"></a>
         <div id="divbusca">
             <input type="text" name="txtBusca" id="txtBusca" placeholder="Buscar">
             <img src="/img/icon_busca.png" id="btnBusca" alt="Buscar"/>
         </div>
     </header>
     <main>
-        <div class="imgVendas">
-            <div class="produto">
-                <img src="/img/elasven1.jpg" alt="">
-                <h3>Tiara</h3>
+        <div class="product-container">
+            <div class="product">
+                <img src="/img/elasven1.jpg" alt="Elásticos">
+                <h3>Elásticos</h3>
                 <p>Preço: R$ 19,99</p>
                 <p>Descrição do produto...</p>
-                <a href="#">Ver produto</a>
+                <a href="/pages/teste_venda.html" class="buy-button">Comprar</a>
             </div>
-            <div class="produto">
-                <img src="/img/elasven2.jpg" alt="">
-                <h3>Tiara</h3>
+            <div class="product">
+                <img src="/img/elasven2.jpg" alt="Elásticos">
+                <h3>Elásticos</h3>
                 <p>Preço: R$ 15,99</p>
                 <p>Descrição do produto...</p>
-                <a href="#">Ver produto</a>
+ 		        <a href="/pages/teste_venda.html" class="buy-button">Comprar</a>
             </div>
-            <div class="produto">
-                <img src="/img/elasven3.jpg" alt="">
-                <h3>Tiara</h3>
+            <div class="product">
+                <img src="/img/elasven3.jpg" alt="Elásticos">
+                <h3>Elásticos</h3>
                 <p>Preço: R$ 9,99</p>
                 <p>Descrição do produto...</p>
-                <a href="#">Ver produto</a>
+                <a href="/pages/teste_venda.html" class="buy-button">Comprar</a>
             </div>
-            <div class="produto">
-                <img src="/img/elasven4.jpg" alt="">
-                <h3>Tiara</h3>
+            <div class="product">
+                <img src="/img/elasven4.jpg" alt="Elásticos">
+                <h3>Elásticos</h3>
                 <p>Preço: R$ 14,99</p>
                 <p>Descrição do produto...</p>
-                <a href="#">Ver produto</a>
+                <a href="/pages/teste_venda.html" class="buy-button">Comprar</a>
             </div>
-            <div class="produto">
-                <img src="/img/elasven5.jpg" alt="">
-                <h3>Tiara</h3>
+            <div class="product">
+                <img src="/img/elasven5.jpg" alt="Elásticos">
+                <h3>Elásticos</h3>
                 <p>Preço: R$ 12,99</p>
                 <p>Descrição do produto...</p>
-                <a href="#">Ver produto</a>
+                <a href="/pages/teste_venda.html" class="buy-button">Comprar</a>
             </div>
-            <div class="produto">
-                <img src="/img/lacoven1.jpg" alt="">
+            <div class="product">
+                <img src="/img/lacoven1.jpg" alt="Laços">
                 <h3>Laços</h3>
                 <p>Preço: R$ 17,99</p>
                 <p>Descrição do produto...</p>
-                <a href="#">Ver produto</a>
+                <a href="/pages/teste_venda.html" class="buy-button">Comprar</a>
             </div>
-            <div class="produto">
-                <img src="/img/lacoven2.jpg" alt="">
+            <div class="product">
+                <img src="/img/lacoven2.jpg" alt="Laços">
                 <h3>Laços</h3>
                 <p>Preço: R$ 11,99</p>
                 <p>Descrição do produto...</p>
-                <a href="#">Ver produto</a>
+                <a href="/pages/teste_venda.html" class="buy-button">Comprar</a>
             </div>
-            <div class="produto">
-                <img src="/img/lacoven3.jpg" alt="">
+            <div class="product">
+                <img src="/img/lacoven3.jpg" alt="Laços">
                 <h3>Laços</h3>
                 <p>Preço: R$ 8,99</p>
                 <p>Descrição do produto...</p>
-                <a href="#">Ver produto</a>
+                <a href="/pages/teste_venda.html" class="buy-button">Comprar</a>
             </div>
-            <div class="produto">
-                <img src="/img/lacoven4.jpg" alt="">
+            <div class="product">
+                <img src="/img/lacoven4.jpg" alt="Laços">
                 <h3>Laços</h3>
                 <p>Preço: R$ 13,99</p>
                 <p>Descrição do produto...</p>
-                <a href="#">Ver produto</a>
+                <a href="/pages/teste_venda.html" class="buy-button">Comprar</a>
             </div>
-            <div class="produto">
-                <img src="/img/lacoven5.jpg" alt="">
+            <div class="product">
+                <img src="/img/lacoven5.jpg" alt="Laços">
                 <h3>Laços</h3>
                 <p>Preço: R$ 10,99</p>
                 <p>Descrição do produto...</p>
-                <a href="#">Ver produto</a>
+                <a href="/pages/teste_venda.html" class="buy-button">Comprar</a>
             </div>
-            <div class="produto">
-                <img src="/img/tiaraven1.jpg" alt="">
+            <div class="product">
+                <img src="/img/tiaraven1.jpg" alt="Tiara">
                 <h3>Elásticos</h3>
                 <p>Preço: R$ 6,99</p>
                 <p>Descrição do produto...</p>
-                <a href="#">Ver produto</a>
+                <a href="/pages/teste_venda.html" class="buy-button">Comprar</a>
             </div>
-            <div class="produto">
-                <img src="/img/tiaraven2.jpg" alt="">
-                <h3>Elásticos</h3>
+            <div class="product">
+                <img src="/img/tiaraven2.jpg" alt="Tiara">
+                <h3>Tiara</h3>
                 <p>Preço: R$ 5,99</p>
                 <p>Descrição do produto...</p>
-                <a href="#">Ver produto</a>
+                <a href="/pages/teste_venda.html" class="buy-button">Comprar</a>
             </div>
-            <div class="produto">
-                <img src="/img/tiaraven3.jpg" alt="">
-                <h3>Elásticos</h3>
+            <div class="product">
+                <img src="/img/tiaraven3.jpg" alt="Tiara">
+                <h3>Tiara</h3>
                 <p>Preço: R$ 7,99</p>
                 <p>Descrição do produto...</p>
-                <a href="#">Ver produto</a>
+                <a href="/pages/teste_venda.html" class="buy-button">Comprar</a>
             </div>
-            <div class="produto">
-                <img src="/img/tiaraven4.jpg" alt="">
-                <h3>Elásticos</h3>
+            <div class="product">
+                <img src="/img/tiaraven4.jpg" alt="Tiara">
+                <h3>Tiara</h3>
                 <p>Preço: R$ 4,99</p>
                 <p>Descrição do produto...</p>
-                <a href="#">Ver produto</a>
+                <a href="/pages/teste_venda.html" class="buy-button">Comprar</a>
             </div>
-            <div class="produto">
-                <img src="/img/tiaraven5.jpg" alt="">
-                <h3>Elásticos</h3>
+            <div class="product">
+                <img src="/img/tiaraven5.jpg" alt="Tiara">
+                <h3>Tiara</h3>
                 <p>Preço: R$ 3,99</p>
                 <p>Descrição do produto...</p>
-                <a href="#">Ver produto</a>
+                <a href="/pages/teste_venda.html" class="buy-button">Comprar</a>
             </div>
-        </div>
-    </main>
+</div>
+</main>
+
 </body>
 </html>
+
